// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabulator /> should have two different levels of headings 1`] = `
<div>
  <div
    class="sc-VigVT cJJQpp"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-1"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-0"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-3"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        id="react-tabs-2"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-0"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-1"
      role="tabpanel"
    >
      <div
        class="sc-bdVaJa edgkJi"
      >
        <h2>
          CDI
        </h2>
      </div>
      <h3>
        titre 1
      </h3>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-2"
      class="react-tabs__tab-panel"
      id="react-tabs-3"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should incease heading levels if not 0 1`] = `
<div>
  <div
    class="sc-VigVT cJJQpp"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-5"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-4"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-7"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        id="react-tabs-6"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-4"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-5"
      role="tabpanel"
    >
      <div
        class="sc-bdVaJa edgkJi"
      >
        <h4>
          CDI
        </h4>
      </div>
      <h5>
        titre 1
      </h5>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-6"
      class="react-tabs__tab-panel"
      id="react-tabs-7"
      role="tabpanel"
    />
  </div>
</div>
`;

exports[`<Tabulator /> should render 1`] = `
<div>
  <div
    class="sc-VigVT cJJQpp"
    data-tabs="true"
  >
    <ul
      class="react-tabs__tab-list"
      role="tablist"
    >
      <li
        aria-controls="react-tabs-9"
        aria-disabled="false"
        aria-selected="true"
        class="react-tabs__tab react-tabs__tab--selected"
        id="react-tabs-8"
        role="tab"
        tabindex="0"
      >
        CDI
      </li>
      <li
        aria-controls="react-tabs-11"
        aria-disabled="false"
        aria-selected="false"
        class="react-tabs__tab"
        id="react-tabs-10"
        role="tab"
      >
        CDD
      </li>
    </ul>
    <div
      aria-labelledby="react-tabs-8"
      class="react-tabs__tab-panel react-tabs__tab-panel--selected"
      id="react-tabs-9"
      role="tabpanel"
    >
      <div
        class="sc-bdVaJa edgkJi"
      >
        <h5>
          CDI
        </h5>
      </div>
      <h6>
        titre 1
      </h6>
      <p>
        paragraphe 1
      </p>
    </div>
    <div
      aria-labelledby="react-tabs-10"
      class="react-tabs__tab-panel"
      id="react-tabs-11"
      role="tabpanel"
    />
  </div>
</div>
`;
